--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -43,7 +43,7 @@
     }
 
     .header__logo{
-        margin-top: -15px;
+        margin-top: -20px;
         padding: 0;
     }
     .header-adaptive{
@@ -81,6 +81,9 @@
         font-size: 16px;
         font-weight: 400;
         width: 100px;
+    }
+    .header_worktime>p{
+        font-size: 14px;
     }
     .categories {
         margin-top: 10px; 
