--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -85,6 +85,9 @@
     .header_worktime>p{
         font-size: 14px;
     }
+    .header_worktime>img:last-child{
+        height:40;
+    }
     .categories {
         margin-top: 10px; 
     }
@@ -92,6 +95,7 @@
         display: block;
     }
     .categories__acne1{
+        min-width: 206.226px;
         max-width: 224px;
         width: 100%;
         height: 200px;
